Nambah dikit yg ke4

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="site-header">
         <div class="container header-container">
             <div class="logo">
-                <span class="logo-corp">Corp</span>Site
+                <span class="logo-corp">RPH</span>Tech
             </div>
             <nav class="desktop-nav">
                 <button data-section="home" class="nav-link">Home</button>
@@ -111,6 +111,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="container section-container"></div>
+                <h2 class="section-title">Why US</h2>
+                <div class="section-divider"></div>
+                <div>
+                    <h3 class="subsection-title">Innovative Service</h3>
+                    <p class="text-content">
+                        In the midst of an ever-evolving digital landscape, we stand as your strategic partner, ready to transform every challenge into endless opportunities. With a strong foundation of vision to lead digital transformation and a mission to deliver superior value, we not only follow the trends, but shape them. We believe that true innovation comes from a deep understanding of your needs and the ability to design solutions that are not only functional, but also revolutionary. Come explore how our expertise and dedication can empower your business to not only survive, but thrive in the future.
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -155,7 +164,7 @@
 
     <footer class="site-footer-bottom">
         <div class="container">
-            <p>&copy; <span id="footer-year"></span> CorpSite. All Rights Reserved.</p>
+            <p>&copy; <span id="footer-year"></span> RPHTech. All Rights Reserved.</p>
         </div>
     </footer>
 </body>
